src/test/deca/syntax/parser/invalid/class_definition_reserved_word.deca
// Parser test, class with a reserved word declared

class if {
    
}